--- a/StrangeCSharpTricks/StrangeCSharpTricks.DictionaryIsTheNewIf.csproj
+++ b/StrangeCSharpTricks/StrangeCSharpTricks.DictionaryIsTheNewIf.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StrangeCSharpTricks.Excel\StrangeCSharpTricks.Excel.csproj" />
     <ProjectReference Include="..\StrangeCSharpTricks.Swagger\StrangeCSharpTricks.Swagger.csproj" />
   </ItemGroup>
 
