--- a/StrangeCSharpTricks/StrangeCSharpTricks.DictionaryIsTheNewIf.csproj
+++ b/StrangeCSharpTricks/StrangeCSharpTricks.DictionaryIsTheNewIf.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StrangeCSharpTricks.Excel\StrangeCSharpTricks.Excel.csproj" />
+    <ProjectReference Include="..\StrangeCSharpTricks.Firebase\StrangeCSharpTricks.Firebase.csproj" />
     <ProjectReference Include="..\StrangeCSharpTricks.Swagger\StrangeCSharpTricks.Swagger.csproj" />
   </ItemGroup>
 
